# djmxcreation_backend

./: .env  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.spa.yml  nginx.conf  package.json  patch_cargo.py  tempo.txt  test.http  test_s3.rs
app-domain/: Cargo.toml
app-domain/src/: about_me.rs  lib.rs  metadata.rs
app-domain/src/mapper/: about_me_mapper.rs  project_mapper.rs
app-domain/src/view/: about_me_view.rs  mod.rs  project_payload.rs  project_view.rs
app-error/: Cargo.toml
app-error/src/: lib.rs
app-service/: Cargo.toml
app-service/src/: about_me_service.rs  contact_service.rs  lib.rs  project_service.rs  spotlight_service.rs
app_core/: Cargo.toml
app_core/src/: lib.rs
app_core/src/about_me/: about_me_service.rs  mod.rs
app_core/src/contact/: contact_service.rs
app_core/src/dto/: about_me_dto.rs  content_dto.rs  me_dto.rs  metadata_dto.rs  mod.rs  project_content_dto.rs  project_dto.rs  project_with_thumbnail_dto.rs  projects_dto.rs
app_core/src/mapper/: project_mapper.rs
app_core/src/project/: project_repository.rs  project_service.rs
app_core/src/spotlight/: mod.rs  spotlight_service.rs
app_core/src/view/: about_me_view.rs  content_view.rs  me_view.rs  mod.rs  project_payload.rs  project_view.rs  projects_view.rs  spotlight_view.rs
crates/app-service/: Cargo.toml
crates/app-service/src/: about_me_service.rs  contact_service.rs  project_service.rs
crates/app-service/tests/: integration_tests.rs  service_logic.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: lib.rs
crates/app_core/src/about_me/: about_me_repository.rs  about_me_service.rs
crates/app_core/src/contact/: contact_repository.rs  contact_service.rs  mod.rs
crates/app_core/src/dto/: about_me_dto.rs  contact_dto.rs  content_dto.rs  me_dto.rs  metadata_dto.rs  mod.rs  project_content_dto.rs  project_dto.rs  project_with_thumbnail_dto.rs  projects_dto.rs  spotlight_dto.rs
crates/app_core/src/project/: mod.rs  project_repository.rs  project_service.rs
crates/app_core/src/spotlight/: mod.rs  spotlight_repository.rs
crates/app_core/src/storage/: mod.rs  object_storage_repository.rs  storage_repository.rs
crates/app_core/src/view/: about_me_view.rs  content_view.rs  me_view.rs  project_payload.rs  project_view.rs  project_with_thumbnail_view.rs  projects_view.rs  spotlight_view.rs
crates/dev-server/: Cargo.toml  README.md
crates/dev-server/src/: main.rs
crates/djmxcreation-backend-axum/: Cargo.toml
crates/djmxcreation-backend-axum/src/: lib.rs  main.rs  validation.rs
crates/djmxcreation-backend-axum/src/error/: axum_error.rs  mod.rs
crates/djmxcreation-backend-axum/src/router/: about_me_router.rs  contact_router.rs  observability_router.rs  project_router.rs
crates/djmxcreation-backend-axum/src/server/: starter.rs
crates/djmxcreation-backend-axum/src/service/: service_register.rs
crates/djmxcreation-backend-axum/tests/: about_me_repository_test.rs  e2e_tests.rs
crates/djmxcreation-backend-wasi/: Cargo.toml
crates/djmxcreation-backend-wasi/src/: lib.rs  main.rs  validation.rs
crates/djmxcreation-backend-wasi/src/error/: mod.rs
crates/djmxcreation-backend-wasi/src/router/: about_me_router.rs  (+3 more)
crates/djmxcreation-backend-wasi/tests/: e2e_tests.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  main.rs
crates/repository/: Cargo.toml
crates/repository/src/: about_me_repository.rs  contact_repository.rs  error.rs  fake_about_me_repository.rs  fake_project_repository.rs  fake_spotlight_repository.rs  fake_storage_repository.rs  garage_storage_repository.rs  lib.rs  project_repository.rs  spotlight_repository.rs  storage_repository.rs  transaction.rs
crates/repository/tests/: about_me_repository_test.rs  contact_repository_test.rs  project_repository_test.rs  spotlight_repository_test.rs  storage_repository_tests.rs
crates/test-util/: Cargo.toml
crates/test-util/src/: lib.rs  minio.rs  postgresql.rs  rustfs.rs  shared_harness.rs  test_db.rs
djmxcreation-backend-axium/: Cargo.toml
djmxcreation-backend-axum/: Cargo.toml  Dockerfile
djmxcreation-backend-axum/src/: lib.rs  main.rs
djmxcreation-backend-axum/src/api_docs/: open_api.rs
djmxcreation-backend-axum/src/controller/: about_me_controller.rs  project_controller.rs
djmxcreation-backend-axum/src/error/: axum_error.rs  mod.rs
djmxcreation-backend-axum/src/router/: about_me_router.rs  contact_router.rs  mod.rs  observability_router.rs  project_router.rs  spotlight_router.rs
djmxcreation-backend-axum/src/security/: basic_auth.rs
djmxcreation-backend-axum/src/server/: starter.rs
djmxcreation-backend-axum/src/service/: service_register.rs
djmxcreation_backend/: Cargo.toml
djmxcreation_backend/src/: lib.rs  main.rs
djmxcreation_backend/src/app_error/: mod.rs
djmxcreation_backend/src/config/: db.rs  minio.rs  mod.rs
djmxcreation_backend/src/controller/: about_me_controller.rs  mod.rs  project_controller.rs
djmxcreation_backend/src/domain/: about_me.rs  content.rs  me.rs  metadata.rs  mod.rs  project_content_entity.rs  project_entity.rs
djmxcreation_backend/src/error/: mod.rs
djmxcreation_backend/src/mapper/: about_me_mapper.rs  mod.rs  project_mapper.rs
djmxcreation_backend/src/mappers/: about_me_mapper.rs  mod.rs
djmxcreation_backend/src/repository/: about_me_repository.rs  mod.rs  project_repository.rs  storage_repository.rs
djmxcreation_backend/src/router/: about_me.rs  mod.rs  project_router.rs
djmxcreation_backend/src/server/: starter.rs
djmxcreation_backend/src/service/: about_me_service.rs  mod.rs  project_service.rs
djmxcreation_backend/src/view/: about_me_view.rs  content_view.rs  mod.rs  project_payload.rs  project_view.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
repository/: Cargo.toml
repository/src/: about_me_repository.rs  error.rs  lib.rs  project_repository.rs  spotlight_repository.rs  storage_repository.rs
repository/src/config/: db.rs  minio.rs
repository/src/entity/: contact.rs  mod.rs  project.rs  project_content.rs  project_with_thumbnail.rs
(+188 files in other folders)
