[workspace]
members = [
    "crates/app-error",
    "crates/djmxcreation-backend-axum",
    "crates/repository",
    "crates/app-service",
    "crates/test-util",
    "crates/app_core",
    "crates/app_config",
    "crates/dev-server",
]

[workspace.dependencies]
app-error = { path = "crates/app-error" }
app_config = { path = "crates/app_config" }
app_core = { path = "crates/app_core" }
app-service = { path = "crates/app-service" }
aws-sdk-s3 = "1.67.0"
dotenv = "0.15.0"
repository = { path = "crates/repository" }
test-util = { path = "crates/test-util" }

anyhow = "1.0.95"
async-trait = "0.1.84"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = "0.14.1"
futures = "0.3.31"
hyper = "1.5.2"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-uuid-1",
    "with-chrono-0_4",
] }
tokio-util = "0.7.13"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }

# WASM/WASI compatibility patches using second-state's WASI-ready forks.
# These replace the standard crates when targeting wasm32-wasi / wasmer.
# Note: [patch.crates-io] must be defined at the workspace root to take effect.
[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.40.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
