[workspace]
members = [
    "crates/app-error",
    "crates/djmxcreation-backend-wasi",
    "crates/repository",
    "crates/app-service",
    "crates/test-util",
    "crates/app_core",
    "crates/app_config",
    "crates/migration",
    "crates/dev-server",
]

resolver = "3"
default-members = [
    "crates/app-error",
    "crates/djmxcreation-backend-wasi",
    "crates/repository",
    "crates/app-service",
    "crates/app_core",
    "crates/app_config",
]

[workspace.dependencies]
app-error = { path = "crates/app-error" }
app_config = { path = "crates/app_config" }
app_core = { path = "crates/app_core" }
app-service = { path = "crates/app-service" }
dotenv = "0.15.0"
dotenvy = "0.15"
repository = { path = "crates/repository" }
test-util = { path = "crates/test-util" }

anyhow = "1.0.95"
async-trait = "0.1.84"
axum = { version = "0.8.4", default-features = false, features = ["json", "matched-path", "original-uri", "query", "tower-log", "tracing", "multipart", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
hyper = "1.5.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, features = ["http-listener", "tracing"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.13"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "=1.11.0", features = ["v4", "fast-rng", "serde"] }
wasi-pg-client = { version = "0.1.1", features = ["uuid", "serde-json", "chrono"] }
axum-test = "17.2"
rustainers = "0.15"
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
getrandom = "0.4"
