[package]
name = "app-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.145"
serde_json = "1.0.85"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
serde = {version="1.0.136", features=["derive"]}
