[package]
name = "app-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
rust-s3 = "0.32.3"
warp = "0.3.3"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
thiserror = "1.0.37"
futures = "0.3.24"