[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
futures = "0.3.24"
app-error = { path = "../app-error" }
app-domain = { path = "../app-domain" }
repository = { path = "../repository" }
