[package]
name = "djmxcreation-backend-axium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-error = { path = "../app-error" }
app-domain = { path = "../app-domain" }
app-service = { path = "../app-service" }
