[package]
name = "djmxcreation-backend-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-error = { path = "../app-error" }
app-service = { path = "../app-service" }
app_core = { path = "../app_core" }
app_config = { path = "../app_config" }
repository = { path = "../repository" }
anyhow = "1.0.65"
axum = { version = "0.6.2", features = ["multipart"] }
tokio = { version = "1.21.2", features = ["full"] }
hyper = "0.14.20"
thiserror = "1.0.37"
serde = "1.0.145"
uuid = { version = "1.1.2", features = ["v4"] }
async-stream = "0.3.3"
futures = "0.3.24"
tokio-util = "0.7.4"
metrics-exporter-prometheus = "0.11.0"
metrics = "0.20.1"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
serde_json = "1.0.87"
