[package]
name = "djmxcreation_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = "0.3.24"
mime_guess = "2.0.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.10"
uuid = { version = "1.1.2", features = ["v4"] }
warp = "0.3.3"
app-error = { path = "../app-error" }
app-domain = { path = "../app-domain" }
app-service = { path = "../app-service" }
# minio-rs = { git = "https://github.com/minio/minio-rs", branch = "master" }
