[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
aws-sdk-s3 = "1.67.0"
rust-s3 = "0.35.1"
chrono = { version = "0.4.39", features = ["serde"] }
app-error = { path = "../app-error" }
serde_json = "1.0.134"
http = "1.2.0"
serde = "1.0.217"
async-trait = "0.1.84"
app_core = { path = "../app_core" }
app_config = { path = "../app_config" }
tracing = "0.1.41"
