[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.134"
futures = "0.3.31"
app-error = { path = "../app-error" }
app_core = { path = "../app_core" }
async-trait = "0.1.84"
log = "0.4.22"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
