[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json   = "1.0.134"
futures      = "0.3.31"
app-error    = { path = "../app-error" }
app_core     = { path = "../app_core" }
async-trait  = "0.1.84"
tracing      = "0.1.41"
uuid         = { version = "1", features = ["v4", "fast-rng", "serde"] }
