[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
futures = { workspace = true }
app-error = { workspace = true }
app_core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
repository = { workspace = true, features = ["test-fakes"] }
