[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.84"
app-error = { path = "../app-error" }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
