[package]
name = "dev-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dev-server"
path = "src/main.rs"

[dependencies]
app_config = { workspace = true }
repository = { workspace = true }
migration = { path = "../migration" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "time", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
wasi-pg-client = { workspace = true, features = ["tokio-transport", "uuid", "chrono", "serde-json"] }
rustainers = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true }
