[package]
name = "djmxcreation-backend-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
app-error    = { path = "../app-error" }
app-service  = { path = "../app-service" }
app_core     = { path = "../app_core" }
app_config   = { path = "../app_config" }
repository   = { path = "../repository" }

anyhow       = "1.0.95"
axum         = { version = "0.8.1", features = ["multipart", "macros"] }
tokio        = { version = "1.42.0", features = ["full"] }
hyper        = "1.5.2"
thiserror    = "2.0.9"
serde        = "1.0.217"
uuid         = { version = "1.11.0", features = ["v4"] }
futures      = "0.3.31"
tokio-util   = "0.7.13"
tracing      = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics-exporter-prometheus = "0.16.0"
metrics      = "0.24.1"
tower        = { version = "0.5.2", features = ["timeout"] }
tower-http   = { version = "0.6.2", features = ["trace", "cors"] }
serde_json   = "1.0.134"

[[bin]]
name = "djmxcreation-backend-axum"
path = "src/main.rs"
