[package]
name = "djmxcreation-backend-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
app-error = { workspace = true }
app-service = { workspace = true }
app_core = { workspace = true }
app_config = { workspace = true }
repository = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }


[[bin]]
name = "djmxcreation-backend-axum"
path = "src/main.rs"
