[package]
name = "djmxcreation-backend-wasi"
version = "0.1.0"
edition = "2024"

[lib]
name = "djmxcreation_backend_wasi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
app-error = { workspace = true }
app-service = { workspace = true }
app_core = { workspace = true }
app_config = { workspace = true }
repository = { workspace = true }

anyhow = { workspace = true }
axum = { version = "0.8.8", default-features = false, features = ["json", "matched-path", "multipart", "original-uri", "query", "tower-log", "tracing"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wstd = "0.6"
wstd-axum = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = { version = "0.13", features = ["std"] }
getrandom = { version = "0.4" }
