[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-fakes = []

[dependencies]
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true }
app-error = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
app_core = { workspace = true }
app_config = { workspace = true }
tracing = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tokio = { workspace = true }
refinery = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = "0.23.3"
test-util = { workspace = true }

[lib]
name = "repository"
path = "src/lib.rs"
