[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-fakes = []

[dependencies]
chrono = { workspace = true }
app-error = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
app_core = { workspace = true }
app_config = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# pg_client: tokio-transport for native, wstd auto-detected on wasm32-wasip2
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi-pg-client = { workspace = true }
getrandom = { version = "0.4" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.21" }

[target.'cfg(target_os = "wasi")'.dependencies]
aws-config = { version = "1.1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.21", default-features = false, features = ["rt-tokio"] }
aws-smithy-runtime-api = { version = "1.1", features = ["client"] }
wasi = "0.13"
url = "2.5"

[dev-dependencies]
testcontainers = "0.23.3"
test-util = { workspace = true }

[lib]
name = "repository"
path = "src/lib.rs"
