[package]
name = "test-util"
version = "0.1.0"
edition = "2024"

[dependencies]
app_config = { workspace = true }
app_core = { workspace = true }
app-error = { workspace = true }
repository = { workspace = true }
rustainers = "0.15.1"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasi-pg-client = { workspace = true, features = ["tokio-transport"] }

[lib]
name = "test_util"
path = "src/lib.rs"
